# DEEPWORLD

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  workflow.md
.github/workflows/: test.yml
deepworld/: __main__.py
deepworld/converter/: __init__.py  pipeline.py
deepworld/core/: enums.py  model.py  timecode.py
deepworld/exporters/: __init__.py  base.py  csv_exporter.py  excel_exporter.py  word_exporter.py
deepworld/parsers/: __init__.py  base.py  edl_parser.py  fcpxml_parser.py  resolve_parser.py  srt_parser.py
deepworld/web/: server.py
deepworld/web/static/: app.js  style.css
deepworld/web/templates/: index.html
samples/: sample_cmx3600.edl  sample_fcpxml.fcpxml  sample_resolve.xml  sample_subtitle.srt  test_output.csv  test_output.docx  test_output.xlsx  test_srt_output.csv
tests/: test_csv_exporter.py  test_edl_parser.py  test_excel_exporter.py  test_fcpxml_parser.py  test_model.py  test_pipeline.py  test_resolve_parser.py  test_srt_parser.py  test_timecode.py  test_word_exporter.py
