[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepworld"
version = "0.1.0"
description = "影视制作中间文件转换工具 — EDL/SRT/FCPXML/Resolve XML 转 Word/Excel/CSV"
requires-python = ">=3.10"
authors = [
    {name = "XAN", email = "1033142216@qq.com"},
]
dependencies = [
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "lxml>=5.0",
    "python-multipart>=0.0.9",
]

[project.urls]
Repository = "https://github.com/XannnN97/DEEPWORLD"

[project.scripts]
deepworld = "deepworld.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages]
find = {include = ["deepworld", "deepworld.*"]}
